More porting work on RFToolsBuilder